--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>lasagna recipe</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
@@ -11,11 +12,11 @@
         <h2>Description</h2>
         <p>This classic lasagna recipe is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly! This is great for feeding a big family and freezes well, too</p>
         <h2>Ingredients</h2>
-        <ul>
-            <li>Ground beef</li>
-            <li>Onions</li>
-            <li>tomato</li>
-            <li>cheese</li>
+        <ul class="monh">
+                <li><p>Ground beef</p></li>
+                <li><p>Onions</p></li>
+                <li><p>tomato</p></li>
+                <li><p>cheese</p></li>  
         </ul>
         <h2>Steps</h2>
         <ol>
