--- a/recipes/lentil-Bolognese.html
+++ b/recipes/lentil-Bolognese.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>lentil-Bolognese recipe</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
@@ -12,14 +13,14 @@
         <p>A lot of the magic in a vegan kitchen happens in the pantry, and this Lentil Bolognese is a prime example. It’s a comforting, tasty meal made exclusively with budget-friendly, shelf-stable ingredients. In fact, many of my favorite pastas are made with pantry ingredients but they never sacrifice on flavor (think vegan caramelized onion pasta, Italian white bean and pasta stew, or creamy pantry pasta)</p>
         <h2>Ingredients</h2>
         <ul>
-            <li>lentils</li>
-            <li>onions and garlic</li>
-            <li>red wine</li>
+            <li><p>lentils</p></li>
+            <li><p>onions and garlic</p></li>
+            <li><p>red wine</p></li>
         </ul>
         <h2>steps</h2>
         <ol>
             <li><p>Saute onion in olive oil until fragrant.</p></li>
-            <li><p>Add carrots, celery and garlic, continue cooking and stirring about 5 minutes. Add herbs and seasonings.</p></li>
+            <li><p>Add carrsots, celery and garlic, continue cooking and stirring about 5 minutes. Add herbs and seasonings.</p></li>
             <li><p>Add tomato paste, browning it a bit. Deglaze -add a  generous splash of red wine and cook this off.  (Optional)</p></li>
             <li><p>Add tomatoes and their juices</p></li>
             <li><p>Bring to a boil and cover.  Simmer for 20-30 minutes</p></li>
