modify all files
Beautification work has been performed. Files has been changed according to the new learnings

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!--create recipes link list-->
-<!DOCType html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My Website</title>
-        <link rel="stylesheet" href="./recipes/style.css">
+        <title>Odin-Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Odin-Recipes</h1>
         <ul>
-            <li><a href="./recipes/hummus-pizza.html"><p>hummus-pizza</p></a></li>
-            <li><a href="./recipes/lasagna.html"><p>lasagna</p></a></li>
-            <li><a href="./recipes/lentil-Bolognese.html"><p>lentil-Bolognese</p></a></li>
+            <li><a href="./recipe/Oven-Roasted-Asparagus.html" target="_blank">Oven-Roasted-Asparagus</a></li>
+            <li><a href="./recipe/Spinach-Strawberry-Salad.html" target="_blank">Spinach-Strawberry-Salad</a></li>
+            <li><a href="./recipe/Spring-Orzo-Risotto.html" target="_blank">Spring-Orzo-Risotto</a></li>
+            <li><a href="./recipe/Mint-Chicken.html" target="_blank">Mint-Chicken</a></li>
         </ul>
-
     </body>
 </html>
